--- a/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PizzaLoveApp.WebUI.Models.ProductListModel
+﻿@model ProductListModel
 
 
 <div class="row">
@@ -10,7 +10,7 @@
         </ul>
     </div>
     <div class="col-md-9">
-        <partial name="_slider" />
+        @*<partial name="_slider" />*@
         @foreach (var item in Model.Products)
         {
             <p>@item.Name</p>
