Added pizza details and cart

--- a/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
@@ -2,12 +2,12 @@
 
 <partial name="_slider" />
 <div class="row">
-    <div class="col-md-12">
+    @*<div class="col-md-12">*@
         @foreach (var item in Model.Products)
         {
-            <p>@item.Name</p>
+            <partial name="_product" for="@item" />
         }
-    </div>
+    @*</div>*@
 </div>
 
 
