--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -13,7 +13,8 @@
                     <a class="nav-link" href="#">Kampanyalar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pizzalar</a>
+                    @*<a class="nav-link" href="#">Pizzalar</a>*@
+                    <a asp-controller="PizzaLove" asp-action="List" class="nav-link">Pizzalar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Hamburgerler</a>
