--- a/PizzaLoveApp.WebUI/Views/Shared/_product.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_product.cshtml
@@ -8,6 +8,7 @@
             </h5>
             <p class="card-text">
                 <i class="fas fa-lira-sign"></i> @Model.Price
+                @*<a href="#" class="btn btn-outline-primary btn-sm ml-3">Sepete Ekle</a>*@
             </p>
 
         </div>
