--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,11 +1,12 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">PizzaLove</a>
+        <em class="navbar-brand" href="#" style="color: black; font-size: 40px; margin: 20px 100px 0px 100px;">Pizza<span style="color:red; font-size:50px;">Love</span></em>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNav" style="margin: 20px 100px 0px 100px;">
+            <ul class="navbar-nav"  >
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Ana Sayfa</a>
                 </li>
