category list added

--- a/PizzaLoveApp.WebUI/Views/PizzaLove/List.cshtml
+++ b/PizzaLoveApp.WebUI/Views/PizzaLove/List.cshtml
@@ -1,11 +1,14 @@
 ﻿@model ProductListModel
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-3">
+        @await Component.InvokeAsync("CategoryList")
+    </div>
+    <div class="col-md-9">
         <div class="row">
             @foreach (Product item in Model.Products)
             {
-                <partial name="_product" for="@item" />
+                <partial name="_product" for="@item"/>
             }
         </div>
     </div>
