--- a/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
@@ -2,12 +2,15 @@
 
 <partial name="_slider" />
 <div class="row">
-    @*<div class="col-md-12">*@
+    <div class="col-md-3">
+        @await Component.InvokeAsync("CategoryList")
+    </div>
+    <div class="col-md-9">
         @foreach (var item in Model.Products)
         {
             <partial name="_product" for="@item" />
         }
-    @*</div>*@
+    </div>
 </div>
 
 
