startup category added

--- a/PizzaLoveApp.WebUI/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CategoryListViewModel
 
-<ul class="list-group">
+<div class="list-group">
     @foreach (var item in Model.Categories)
     {
-        <li class="list-group-item">
+        <a class="list-group-item">
             @item.Name
-        </li>
+        </a>
     }
-</ul>
+</div>
