--- a/PizzaLoveApp.WebUI/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/Components/CategoryList/Default.cshtml
@@ -3,7 +3,10 @@
 <div class="list-group">
     @foreach (var item in Model.Categories)
     {
-        <a class="list-group-item">
+        <a asp-controller="PizzaLove"
+           asp-action="List"
+           asp-route-category="@item.Name.ToLower()"
+            class="list-group-item list-group-item-action @(Model.SelectedCategory == item.Name.ToLower()?"active":"")">
             @item.Name
         </a>
     }
