--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -27,6 +27,9 @@
                     <a class="nav-link" href="#">Yan Ürünler</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/Admin/CreateProduct">Ürün Ekle</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">İletişim</a>
                 </li>
                 @*<li class="nav-item">
