Added Edit and fixed some layers.

--- a/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
@@ -6,13 +6,13 @@
     </div>
     <div class="col-md-9">
         <partial name="_slider" />
-        <div class="row">
+        @*<div class="row">
 
             @foreach (var item in Model.Products)
             {
                 <partial name="_product" for="@item" />
             }
-        </div>
+        </div>*@
     </div>
 </div>
 
