--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -25,7 +25,7 @@
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Açıklama</label>
                 <div class="col-md-10">
-                    <input asp-for="Description" class="form-control" />
+                    <textarea id="editor" asp-for="Description" class="form-control"></textarea>
                 </div>
             </div>
             <div class="form-group-row">
@@ -40,7 +40,7 @@
                     <input asp-for="Size" class="form-control" />
                 </div>
             </div>
-            <div class="form-group-row">
+            <div class="form-group-row mt-2">
                 <div class="col-md-10">
                     <button type="submit" class="btn btn-primary mt-4">Ürünü Ekle</button>
                 </div>
