--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,40 +1,40 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <em class="navbar-brand" href="#" style="color: black; font-size: 40px; margin: 20px 100px 0px 100px;">Pizza<span style="color:red; font-size:50px;">Love</span></em>
+        <em class="navbar-brand" href="#" style="color: black; font-size: 45px; margin: 20px 180px 0px 120px;">Pizza<span style="color:red; font-size:50px;">Love</span></em>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav" style="margin: 20px 100px 0px 100px;">
-            <ul class="navbar-nav"  >
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Kampanyalar</a>
                 </li>
+                <!--<li class="nav-item">-->
+                @*<a class="nav-link" href="#">Pizzalar</a>*@
+                @*<a asp-controller="PizzaLove" asp-action="List" class="nav-link">Pizzalar</a>*@
+
                 <li class="nav-item">
-                    @*<a class="nav-link" href="#">Pizzalar</a>*@
-                    <a asp-controller="PizzaLove" asp-action="List" class="nav-link">Pizzalar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Hamburgerler</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Kahvaltılıklar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Yan Ürünler</a>
+                    <a class="nav-link" href="/admin/products">Admin Ürünler</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Admin/CreateProduct">Ürün Ekle</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Admin Kategoriler</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Kategori Ekle</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">İletişim</a>
                 </li>
                 @*<li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>*@
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>*@
             </ul>
         </div>
     </div>
