--- a/PizzaLoveApp.WebUI/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/Components/CategoryList/Default.cshtml
@@ -6,7 +6,8 @@
         <a asp-controller="PizzaLove"
            asp-action="List"
            asp-route-category="@item.Name.ToLower()"
-            class="list-group-item list-group-item-action @(Model.SelectedCategory == item.Name.ToLower()?"active":"")">
+           class="list-group-item list-group-item-action @(Model.SelectedCategory == item.Name.ToLower()?"active":"")">
+            <img src="img/2.jpg " style="width: 45px" />
             @item.Name
         </a>
     }
