--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/Admin/CreateProduct">Ürün Ekle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Admin Kategoriler</a>
+                    <a asp-controller="Admin" asp-action="CategoryList" class="nav-link">Kategoriler</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Kategori Ekle</a>
