changed index to products list

--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "EditProduct";
 }
 
-<h1>EditProduct</h1>
+<h1>Ürünü Düzenle</h1>
 <hr />
 <form asp-controller="Admin" asp-action="EditProduct" method="post">
     <div class="row">
