Edit Category was made

--- a/PizzaLoveApp.WebUI/Views/Admin/CategoryList.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CategoryList.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "CategoryList";
 }
 
-<h1>CategoryList</h1>
+<h1>Kategoriler</h1>
 <hr />
 @if (Model.Categories.Count > 0)
 {
