--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -27,7 +27,7 @@
                     <a asp-controller="Admin" asp-action="CategoryList" class="nav-link">Kategoriler</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori Ekle</a>
+                     <a asp-controller="Admin" asp-action="CreateCategory" class="nav-link">Kategori Ekle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">İletişim</a>
