Added "delete category"

--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/admin/products">Admin Ürünler</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Admin/CreateProduct">Ürün Ekle</a>
+                    <a asp-controller="Admin" asp-action="CreateProduct" class="nav-link">Ürün Ekle</a>
                 </li>
                 <li class="nav-item">
                     <a asp-controller="Admin" asp-action="CategoryList" class="nav-link">Kategoriler</a>
