--- a/PizzaLoveApp.WebUI/Views/Admin/CategoryList.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CategoryList.cshtml
@@ -27,6 +27,10 @@
                         @Html.ActionLink("Edit", "EditCategory", new { categoryId = item.Id },
                             new { @class = "btn btn-primary btn-sm mr-2" })
 
+                        <form action="/Admin/deletecategory" method="post" style="display:inline">
+                            <input type="hidden" name="categoryId" value="@item.Id" />
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        </form>
                     </td>
                 </tr>
             }
