Added product delete from categories and added categories under edit product page

--- a/PizzaLoveApp.WebUI/Views/Admin/CategoryList.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CategoryList.cshtml
@@ -13,7 +13,7 @@
         <thead>
             <tr>
                 <th style="width: 30px"></th>
-                <th style="width: 100px">Name</th>
+                <th style="width: 100px">İsim</th>
                 <th style="width: 150px"></th>
             </tr>
         </thead>
@@ -29,7 +29,7 @@
 
                         <form action="/Admin/deletecategory" method="post" style="display:inline">
                             <input type="hidden" name="categoryId" value="@item.Id" />
-                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                            <button type="submit" class="btn btn-danger btn-sm">Sil</button>
                         </form>
                     </td>
                 </tr>
