--- a/PizzaLoveApp.WebUI/Views/Admin/EditCategory.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditCategory.cshtml
@@ -1,4 +1,4 @@
-﻿ @model CategoryModel
+﻿@model CategoryModel
 
 @{
     ViewData["Title"] = "EditCategory";
@@ -25,6 +25,42 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+    </div>
+    <div class="col-md-8">
+        @if (Model.Products.Count > 0)
+        {
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th style="width:30px;">Id</th>
+                        <th style="width:100px;">Resim</th>
+                        <th>İsim</th>
+                        <th style="width:12px;">Fiyat</th>
+                        <th style="width:150px;"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.Products)
+                    {
+                        <tr>
+                            <td>@item.Id</td>
+                            <td><img src="~/img/@item.ImageUrl" width="80" /></td>
+                            <td>@item.Name</td>
+                            <td>@item.Price</td>
+                            <td>
+                                <a class="btn btn-primary btn-sm mr-2" href="/admin/products/@item.Id">Düzenle</a>
+                                <form action="/Admin/deletefromcategory" method="post" style="display:inline">
+                                    <input type="hidden" name="productId" value="@item.Id" />
+                                    <input type="hidden" name="categoryId" value="@Model.Id"/>
+                                    <button type="submit" class="btn btn-danger btn-sm">Sil</button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+
+                </tbody>
+            </table>
+        }
     </div>
 </div>
 
