--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -8,7 +8,6 @@
 <form asp-controller="Admin" asp-action="EditProduct" method="post">
     <div class="row">
         <div class="col-md-8">
-
             <input type="hidden" name="Id" value="@Model.Id" />
             <div class="form-group-row">
                 <label asp-for="Name" class="col-md-2 col-form-label">Ürün Adı</label>
@@ -39,8 +38,17 @@
                     <button type="submit" class="btn btn-primary">Ürünü Düzenle</button>
                 </div>
             </div>
-
         </div>
-
+        <div class="col-md-4">
+            @foreach (var item in (List<Category>) ViewBag.Categories)
+            {
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="category@(item.Id)">
+                    <label class="form-check-label" for="category@(item.Id)">
+                        @item.Name
+                    </label>
+                </div>
+            }
+        </div>
     </div>
 </form>
