--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Ana Sayfa</a>
+                    <a class="nav-link active" aria-current="page" href="/Home/Index">Ana Sayfa</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Kampanyalar</a>
