--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -43,7 +43,8 @@
             @foreach (var item in (List<Category>) ViewBag.Categories)
             {
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="category@(item.Id)">
+                    <input class="form-check-input" type="checkbox" value="" id="category@(item.Id)" 
+                           @(Model.SelectedCategories.Any(i=>i.Id==item.Id)? "checked" : "")>
                     <label class="form-check-label" for="category@(item.Id)">
                         @item.Name
                     </label>
