--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group-row mt-2">
                 <div class="col-md-10">
-                    <button type="submit" class="btn btn-primary">Ürünü Düzenle</button>
+                    <button type="submit" class="btn btn-primary">Kaydet</button>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
             @foreach (var item in (List<Category>) ViewBag.Categories)
             {
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="category@(item.Id)" 
+                    <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" 
                            @(Model.SelectedCategories.Any(i=>i.Id==item.Id)? "checked" : "")>
                     <label class="form-check-label" for="category@(item.Id)">
                         @item.Name
