--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -9,35 +9,41 @@
 
 <div class="row">
     <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="CreateProduct">
+        <form asp-controller="Admin" asp-action="CreateProduct" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Pizza Adı</label>
                 <div class="col-md-10">
-                    <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" value="@Model.Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Resim Adresi</label>
                 <div class="col-md-10">
-                    <input asp-for="ImageUrl" class="form-control" />
+                    <input asp-for="ImageUrl" value="@Model.ImageUrl" class="form-control" />
+                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Açıklama</label>
                 <div class="col-md-10">
-                    <textarea id="editor" asp-for="Description" class="form-control"></textarea>
+                    <textarea id="editor" asp-for="Description" value="@Model.Description" class="form-control"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Fiyatı</label>
                 <div class="col-md-10">
-                    <input asp-for="Price" class="form-control" />
+                    <input asp-for="Price" value="@Model.Price" class="form-control" />
+                    <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Boyutu</label>
                 <div class="col-md-10">
-                    <input asp-for="Size" class="form-control" />
+                    <input asp-for="Size" value="@Model.Size" class="form-control" />
+                    <span asp-validation-for="Size" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row mt-2">
