--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -2,14 +2,14 @@
 
 @{
     ViewData["Title"] = "CreateProduct";
+    var counter = 0;
 }
 
 <h1>Ürün Ekle</h1>
 <hr />
-
-<div class="row">
-    <div class="col-md-8">
-        <form asp-controller="Admin" asp-action="CreateProduct" method="post">
+<form asp-controller="Admin" asp-action="CreateProduct" method="post" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-md-8">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Pizza Adı</label>
@@ -21,7 +21,9 @@
             <div class="form-group-row">
                 <label class="col-md-2 col-form-label">Resim Adresi</label>
                 <div class="col-md-10">
-                    <input asp-for="ImageUrl" value="@Model.ImageUrl" class="form-control" />
+                    <input type="hidden" asp-for="ImageUrl" value="@Model.ImageUrl" />
+                    <img src="~/img/@Model.ImageUrl" width="80" />
+                    <input type="file" name="file" value="" />
                     <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
             </div>
@@ -51,6 +53,30 @@
                     <button type="submit" class="btn btn-primary mt-4">Ürünü Ekle</button>
                 </div>
             </div>
-        </form>
+        </div>
+        <div class="col-md-4">
+            @foreach (var item in (List<Category>)ViewBag.Categories)
+            {
+                var isChecked = "";
+                if (Model.SelectedCategories.Any(i => i.Id == item.Id))
+                {
+                    isChecked = "checked";
+                    <input type="hidden" name="SelectCategories[@counter].Id" value="@item.Id" />
+                    <input type="hidden" name="SelectCategories[@counter].Name" value="@item.Name" />
+
+                    counter++;
+                }
+                else
+                {
+                    isChecked = "";
+                }
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" @isChecked>
+                    <label class="form-check-label" for="category@(item.Id)">
+                        @item.Name
+                    </label>
+                </div>
+            }
+        </div>
     </div>
-</div>
+</form>
