--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ProductModel
 @{
     ViewData["Title"] = "EditProduct";
+    var counter = 0;
 }
 
 <h1>Ürünü Düzenle</h1>
@@ -18,8 +19,8 @@
             <div class="form-group-row">
                 <label asp-for="ImageUrl" class="col-md-2 col-form-label">Resim Adresi</label>
                 <div class="col-md-10">
-                    <input type="hidden"  name="ImageUrl" value="@Model.ImageUrl"/>
-                    <img src="~/img/@Model.ImageUrl" width="80"/>
+                    <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
+                    <img src="~/img/@Model.ImageUrl" width="80" />
                     <input type="file" name="file" value="" />
                 </div>
             </div>
@@ -42,11 +43,23 @@
             </div>
         </div>
         <div class="col-md-4">
-            @foreach (var item in (List<Category>) ViewBag.Categories)
+            @foreach (var item in (List<Category>)ViewBag.Categories)
             {
+                var isChecked = "";
+                if (Model.SelectedCategories.Any(i => i.Id == item.Id))
+                {
+                    isChecked = "checked";
+                    <input type="hidden" name="SelectCategories[@counter].Id" value="@item.Id" />
+                    <input type="hidden" name="SelectCategories[@counter].Name" value="@item.Name" />
+
+                    counter++;
+                }
+                else
+                {
+                    isChecked = "";
+                }
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" 
-                           @(Model.SelectedCategories.Any(i=>i.Id==item.Id)? "checked" : "")>
+                    <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" @isChecked>
                     <label class="form-check-label" for="category@(item.Id)">
                         @item.Name
                     </label>
