--- a/PizzaLoveApp.WebUI/Views/Shared/_Layout.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_Layout.cshtml
@@ -20,5 +20,7 @@
     <script src="/modules/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="/modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    @RenderSection("Scripts", false)
 </body>
 </html>
