--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -12,17 +12,7 @@
     <script>
         CKEDITOR.replace("editor");
     </script>
-    <script>
-        $.validator.methods.range = function (value, element, param) {
-            var globalizedValue = value.replace(",", ".");
-            return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
-        }
 
-        $.validator.methods.number = function (value, element) {
-            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+(?:[\.,]\d+)?$/.test(value);
-        }
-
-    </script>
 }
 <h1>Ürün Ekle</h1>
 <hr />
@@ -54,7 +44,7 @@
                 </div>
             </div>
             <div class="form-group-row">
-                <label asp-for="Price" class="col-md-2 col-form-label">Fiyatı</label>
+                <label class="col-md-2 col-form-label">Fiyatı</label>
                 <div class="col-md-10">
                     <input asp-for="Price" value="@Model.Price" class="form-control" />
                     <span asp-validation-for="Price" class="text-danger"></span>
@@ -69,7 +59,7 @@
             </div>
             <div class="form-group-row mt-2">
                 <div class="col-md-10">
-                    <button type="submit" class="btn btn-primary mt-4">Ürünü Kaydet</button>
+                    <button type="submit" class="btn btn-primary mt-4">Ürünü Ekle</button>
                 </div>
             </div>
         </div>
@@ -90,10 +80,7 @@
                     isChecked = "";
                 }
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox"
-                           name="categoryIds"
-                           value="@item.Id"
-                           id="category@(item.Id)" @isChecked>
+                    <input class="form-check-input" type="checkbox" name="categoryIds" value="@item.Id" id="category@(item.Id)" @isChecked>
                     <label class="form-check-label" for="category@(item.Id)">
                         @item.Name
                     </label>
