--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -27,14 +27,26 @@
                     <a asp-controller="Admin" asp-action="CategoryList" class="nav-link">Kategoriler</a>
                 </li>
                 <li class="nav-item">
-                     <a asp-controller="Admin" asp-action="CreateCategory" class="nav-link">Kategori Ekle</a>
+                    <a asp-controller="Admin" asp-action="CreateCategory" class="nav-link">Kategori Ekle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">İletişim</a>
                 </li>
                 @*<li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>*@
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>*@
+            </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Logout</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Register</a>
+                </li>
+
             </ul>
         </div>
     </div>
