--- a/PizzaLoveApp.WebUI/Views/Account/Login.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Account/Login.cshtml
@@ -14,10 +14,11 @@
     <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl"/>
             <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
@@ -32,5 +33,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Geri Dön</a>
+    @*<a asp-action="ForgotPassword">Şifremi Unuttum</a>*@
 </div>
