--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,11 +1,12 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         @*TODO Logo kontrol edilecek link çalışmıyor görünümü bozuyor responsive tasarımı bozuyor*@
-        <em class="navbar-brand" href="/home/index" style="color: black; font-size: 45px;">Pizza<span style="color: red; font-size: 50px;">Love</span></em>
+        @*<em class="navbar-brand" href="/home/index" style="color: black; font-size: 45px;">Pizza<span style="color: red; font-size: 50px;">Love</span></em>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button>*@
+        <a class="navbar-brand" asp-controller="Home" asp-action="Index">PizzaLove</a>
         <div class="col-md-9">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
