--- a/PizzaLoveApp.WebUI/Views/Shared/_footer.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_footer.cshtml
@@ -1,35 +1,5 @@
-﻿@*<footer class="footer-distributed">
-    
-
-    <div class="footer-right">
-
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
-
-    </div>
-
-    <div class="footer-left">
-
-        <p class="footer-links">
-            <a class="link-1" href="#">Home</a>
-
-            <a href="#">Blog</a>
-
-            <a href="#">Pricing</a>
-
-            <a href="#">About</a>
-
-            <a href="#">Faq</a>
-
-            <a href="#">Contact</a>
-        </p>
-
-        <p>Company Name &copy; 2015</p>
-    </div>
-
-</footer>*@
+﻿
+@* TODO footer CSS dosyası içinden p tagını değiştiten etiket değiştirilecek yazıları değiştiriyor footer tam oturmadı bakılacak *@
 
 <footer id="dk-footer" class="dk-footer">
     <div class="container">
@@ -43,7 +13,7 @@
                         Reference site about Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.
                     </p>
                     <div class="footer-social-link">
-                        <h3>Follow us</h3>
+                        <h3>Bizi takip edin</h3>
                         <ul>
                             <li>
                                 <a href="#">
@@ -90,7 +60,7 @@
                             </div>
                             <!-- End contact Icon -->
                             <div class="contact-info">
-                                <h3>Jaipur India</h3>
+                                <h3>Polatlı Ankara</h3>
                                 <p>5353 Road Avenue</p>
                             </div>
                             <!-- End Contact Info -->
@@ -106,7 +76,7 @@
                             <!-- End contact Icon -->
                             <div class="contact-info">
                                 <h3>95 711 9 5353</h3>
-                                <p>Give us a call</p>
+                                <p>Bizi arayın</p>
                             </div>
                             <!-- End Contact Info -->
                         </div>
@@ -119,12 +89,12 @@
                     <div class="col-md-12 col-lg-6">
                         <div class="footer-widget footer-left-widget">
                             <div class="section-heading">
-                                <h3>Useful Links</h3>
+                                <h3>Yararlı Linkler</h3>
                                 <span class="animate-border border-black"></span>
                             </div>
                             <ul>
                                 <li>
-                                    <a href="#">About us</a>
+                                    <a href="#">Hakkımızda</a>
                                 </li>
                                 <li>
                                     <a href="#">Services</a>
@@ -138,7 +108,7 @@
                             </ul>
                             <ul>
                                 <li>
-                                    <a href="#">Contact us</a>
+                                    <a href="#">İletişim</a>
                                 </li>
                                 <li>
                                     <a href="#">Blog</a>
@@ -200,7 +170,7 @@
                     <div class="copyright-menu">
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="#">Ana Sayfa</a>
                             </li>
                             <li>
                                 <a href="#">Terms</a>
@@ -209,7 +179,7 @@
                                 <a href="#">Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="#">Contact</a>
+                                <a href="#">İletişim</a>
                             </li>
                         </ul>
                     </div>
@@ -224,7 +194,7 @@
     <!-- Back to top -->
     <div id="back-to-top" class="back-to-top">
         <button class="btn btn-dark" title="Back to Top" style="display: block;">
-            <i class="fa fa-angle-up"></i>
+            <a href="#"> <i class="fa fa-angle-up"></i></a>
         </button>
     </div>
     <!-- End Back to top -->
