--- a/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         @*TODO Logo kontrol edilecek link çalışmıyor görünümü bozuyor responsive tasarımı bozuyor*@
         @*<em class="navbar-brand" href="/home/index" style="color: black; font-size: 45px;">Pizza<span style="color: red; font-size: 50px;">Love</span></em>
