Fixed footer, Added google maps, added seedIdentity.cs

--- a/PizzaLoveApp.WebUI/Views/Admin/EditCategory.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditCategory.cshtml
@@ -21,8 +21,9 @@
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group-row mt-2">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <button class="btn btn-secondary" asp-action="CategoryList">Geri Git</button>
             </div>
         </form>
     </div>
@@ -63,8 +64,3 @@
         }
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
