--- a/PizzaLoveApp.WebUI/Views/Shared/_footer.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_footer.cshtml
@@ -45,10 +45,6 @@
                     <!-- End Social link -->
                 </div>
                 <!-- End Footer info -->
-                <div class="footer-awarad">
-                    <img src="images/icon/best.png" alt="">
-                    <p>Best Design Company 2019</p>
-                </div>
             </div>
             <!-- End Col -->
             <div class="col-md-12 col-lg-8">
@@ -61,7 +57,7 @@
                             <!-- End contact Icon -->
                             <div class="contact-info">
                                 <h3>Polatlı Ankara</h3>
-                                <p>5353 Road Avenue</p>
+                                <p>Polatlı Cumhuriyet Mah.</p>
                             </div>
                             <!-- End Contact Info -->
                         </div>
@@ -75,7 +71,7 @@
                             </div>
                             <!-- End contact Icon -->
                             <div class="contact-info">
-                                <h3>95 711 9 5353</h3>
+                                <h3>0312 622 66 00</h3>
                                 <p>Bizi arayın</p>
                             </div>
                             <!-- End Contact Info -->
@@ -130,7 +126,7 @@
                                 <h3>Subscribe</h3>
                                 <span class="animate-border border-black"></span>
                             </div>
-                            <p>
+                            <p class="footer-info-text">
                                 <!-- Don’t miss to subscribe to our new feeds, kindly fill the form below. -->
                                 Reference site about Lorem Ipsum, giving information on its origins, as well.
                             </p>
