--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -69,7 +69,8 @@
             </div>
             <div class="form-group-row mt-2">
                 <div class="col-md-10">
-                    <button type="submit" class="btn btn-primary mt-4">Ürünü Ekle</button>
+                    <button type="submit" class="btn btn-primary">Ürünü Ekle</button>
+                    <button class="btn btn-secondary" asp-controller="Home" asp-action="Index">Geri Git</button>
                 </div>
             </div>
         </div>
