--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -60,6 +60,7 @@
             <div class="form-group-row mt-2">
                 <div class="col-md-10">
                     <button type="submit" class="btn btn-primary">Kaydet</button>
+                    <button class="btn btn-secondary" asp-action="EditProduct">Geri Git</button>
                 </div>
             </div>
         </div>
