Change UI english word with Turkish word Fixed ImageUri model state in Admin controller create product and edit product Fixed validation message

--- a/PizzaLoveApp.WebUI/Views/Shared/_Layout.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_Layout.cshtml
@@ -7,10 +7,11 @@
     <link href="~/modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/modules/Custom/footer.css" rel="stylesheet" />
+    <link href="~/modules/Custom/MyCss.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b6b5d8a538.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body background-color="#2a2a2a">
 
     <partial name="_navbar" />
     <div class="container pt-100 mb-5">
@@ -19,11 +20,12 @@
 
     <partial name="_footer" />
 
-    
+
     <script src="~/modules/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="~/modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    @RenderSection("Scripts", false)
+
+@RenderSection("Scripts", false)
 </body>
 </html>
