--- a/PizzaLoveApp.WebUI/Views/Account/Login.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Account/Login.cshtml
@@ -7,11 +7,10 @@
     <script src="~/modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
 }
 
-<h1>Login</h1>
-<h4>Login User</h4>
+<h1>Giriş Yap</h1>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl"/>
@@ -20,19 +19,15 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Giriş Yap" class="btn btn-primary" />
+                <button class="btn btn-secondary" asp-controller="Account" asp-action="ForgotPassword">Şifremi Unuttum</button>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Geri Dön</a>
-    @*<a asp-action="ForgotPassword">Şifremi Unuttum</a>*@
 </div>
