--- a/PizzaLoveApp.WebUI/Views/Account/Register.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Account/Register.cshtml
@@ -7,8 +7,7 @@
     <script src="~/modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
 }
 
-<h1>Register</h1>
-<h4>Register User</h4>
+<h1>Üye Ol</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,33 +18,29 @@
                 <input asp-for="FullName" class="form-control" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="RePassword" class="control-label"></label>
                 <input asp-for="RePassword" class="form-control" />
                 <span asp-validation-for="RePassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create User" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Kayıt Ol" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
