--- a/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/CreateProduct.cshtml
@@ -12,6 +12,8 @@
     <script>
         CKEDITOR.replace("editor");
     </script>
+    @*TODO : Price girerken aşağıdaki script kaldırınca virgül girilemiyor sadece nokta ile giriş yapılabiliryor 40.5 gibi ama buda 405,00 olarak Db gidiyor bunuda önlemek için aşağıdaki script eklendi ancak bu seferde , ile giriş yapılabiliyor ama noktada kabul ediyor etmemeli sorun oluşturuyor düzeltilmeli
+        *@
     <script>
         $.validator.methods.range = function (value, element, param) {
             var globalizedValue = value.replace(",", ".");
@@ -19,9 +21,18 @@
         }
 
         $.validator.methods.number = function (value, element) {
-            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+(?:[\.,]\d+)?$/.test(value);
+            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
         }
 
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $("#fileImage").change(function (e) {
+                $("#imgPreview").show();
+                $("#imgPreview").attr("src", URL.createObjectURL(e.target.files[0]));
+            })
+        })
     </script>
 }
 <h1>Ürün Ekle</h1>
@@ -31,37 +42,37 @@
         <div class="col-md-8">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group-row">
-                <label class="col-md-2 col-form-label">Pizza Adı</label>
+                <label asp-for="Name" class="col-md-2 col-form-label">Ürün İsmi</label>
                 <div class="col-md-10">
                     <input asp-for="Name" value="@Model.Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
-                <label class="col-md-2 col-form-label">Resim Adresi</label>
+                <label class="col-md-2 col-form-label">Resim Ekle</label>
                 <div class="col-md-10">
                     <input type="hidden" asp-for="ImageUrl" value="@Model.ImageUrl" />
-                    <img src="~/img/@Model.ImageUrl" width="80" />
-                    <input type="file" name="file" value="" />
+                    <img src="~/img/@Model.ImageUrl" width="80px" id="imgPreview" />
+                    <input type="file" name="file" value="" id="fileImage" />
                     <span asp-validation-for="ImageUrl" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
-                <label class="col-md-2 col-form-label">Açıklama</label>
+                <label asp-for="Description" class="col-md-2 col-form-label">Açıklama</label>
                 <div class="col-md-10">
                     <textarea id="editor" asp-for="Description" value="@Model.Description" class="form-control"></textarea>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
-                <label class="col-md-2 col-form-label">Fiyatı</label>
+                <label asp-for="Price" class="col-md-2 col-form-label">Fiyatı</label>
                 <div class="col-md-10">
                     <input asp-for="Price" value="@Model.Price" class="form-control" />
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group-row">
-                <label class="col-md-2 col-form-label">Boyutu</label>
+                <label asp-for="Size" class="col-md-2 col-form-label">Boyutu</label>
                 <div class="col-md-10">
                     <input asp-for="Size" value="@Model.Size" class="form-control" />
                     <span asp-validation-for="Size" class="text-danger"></span>
