--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -11,6 +11,7 @@
     <script>
         CKEDITOR.replace("editor");
     </script>
+
     <script>
         $.validator.methods.range = function (value, element, param) {
             var globalizedValue = value.replace(",", ".");
@@ -18,10 +19,19 @@
         }
 
         $.validator.methods.number = function (value, element) {
-            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+(?:[\.,]\d+)?$/.test(value);
+            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
         }
-
     </script>
+
+    <script>
+        $(document).ready(function () {
+            $("#fileImage").change(function (e) {
+                $("#imgPreview").show();
+                $("#imgPreview").attr("src", URL.createObjectURL(e.target.files[0]));
+            })
+        })
+    </script>
+
 }
 
 <h1>Ürünü Düzenle</h1>
@@ -41,8 +51,8 @@
                 <label asp-for="ImageUrl" class="col-md-2 col-form-label">Resim Adresi</label>
                 <div class="col-md-10">
                     <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
-                    <img src="~/img/@Model.ImageUrl" width="80" />
-                    <input type="file" name="file" value="" />
+                    <img src="~/img/@Model.ImageUrl" width="80px" id="imgPreview" />
+                    <input type="file" name="file" value="" id="fileImage" />
                 </div>
             </div>
             <div class="form-group-row">
