--- a/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
 
 <div class="row">
     <div class="col-md-3">
-        @await Component.InvokeAsync("CategoryList")
+        <ul class="list-group">
+            @await Component.InvokeAsync("CategoryList")
+        </ul>
     </div>
     <div class="col-md-9">
         <partial name="_slider" />
