--- a/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Admin/EditProduct.cshtml
@@ -67,6 +67,12 @@
                     <input asp-for="Price" value="@Model.Price" class="form-control" />
                 </div>
             </div>
+            <div class="form-group-row">
+            <label asp-for="PointPrize" class="col-md-4 col-form-label">PizzaLove Puan</label>
+            <div class="col-md-10">
+                <input asp-for="PointPrize" value="@Model.PointPrize" class="form-control" />
+            </div>
+        </div>
             <div class="form-group-row mt-2">
                 <div class="col-md-10">
                     <button type="submit" class="btn btn-primary">Kaydet</button>
