--- a/PizzaLoveApp.WebUI/Views/PizzaLove/Details.cshtml
+++ b/PizzaLoveApp.WebUI/Views/PizzaLove/Details.cshtml
@@ -21,7 +21,20 @@
             <h4 class="text-primary mb-3">
                 @Model.Product.Price TL
             </h4>
-            <button type="submit" class="btn btn-primary btn-lg">Satın Al</button>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <form asp-controller="Cart" asp-action="AddtoCart" method="post" class="form-inline">
+                    <input type="hidden" name="productId" value="@Model.Product.Id" />
+                    <div class="input-group mb-3">
+                        <input type="number" name="quantity" class="form-control" value="1" min="1" max="10" step="1" style="width:100px" />
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-cart-plus"></i> Sepete Ekle
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            }
         </div>
     </div>
 </div>
@@ -29,7 +42,7 @@
 <div class="row">
     <div class="col-md-12">
         <p class="p-3">
-            @Model.Product.Description
+            @Html.Raw(Model.Product.Description)
         </p>
     </div>
 </div>
