--- a/PizzaLoveApp.WebUI/Views/Shared/_Layout.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using PizzaLoveApp.WebUI.Extensions
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -14,8 +15,15 @@
 <body background-color="#2a2a2a">
 
     <partial name="_navbar" />
+
     <div class="container pt-100 mb-5">
+        @if (TempData["message"] != null)
+        {
+            <partial name="_resultmessage" model="@(TempData.Get<ResultMessage>("message"))" />
+        }
+
         @RenderBody()
+
     </div>
 
     <partial name="_footer" />
@@ -26,6 +34,6 @@
     <script src="~/modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
-@RenderSection("Scripts", false)
+    @RenderSection("Scripts", false)
 </body>
 </html>
