--- a/PizzaLoveApp.WebUI/Views/Shared/_product.cshtml
+++ b/PizzaLoveApp.WebUI/Views/Shared/_product.cshtml
@@ -8,13 +8,20 @@
             </h5>
             <p class="card-text">
                 <i class="fas fa-lira-sign"></i> @Model.Price
-                @*<a href="#" class="btn btn-outline-primary btn-sm ml-3">Sepete Ekle</a>*@
             </p>
 
         </div>
         <div class="card-footer text-center">
-            <a asp-controller="PizzaLove" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary btn-sm">Details</a>
-            <a href="#" class="btn btn-outline-primary btn-sm ml-3">Sepete Ekle</a>
+            <a asp-controller="PizzaLove" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary btn-sm">Detay</a>
+
+            @if (User.Identity.IsAuthenticated)
+            {
+                <form asp-controller="Cart" asp-action="AddToCart" method="post" style="display:inline">
+                    <input type="hidden" name="productId" value="@Model.Id" />
+                    <input type="hidden" name="quantity" value="1" />
+                    <button type="submit" class="btn btn-outline-primary btn-sm ml-3">Sepete Ekle</button>
+                </form>
+            }
         </div>
     </div>
 </div>
